name:                hnix-store-s3
version:             0.1.0.0
synopsis:            S3 hnix store
description:
homepage:            https://github.com/haskell-nix/hnix-store
license:             Apache-2.0
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
copyright:           2019 Brian McKenna
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     System.Nix.Store.S3

  build-depends:       base >=4.10 && <4.12
                     , amazonka
                     , amazonka-s3
                     , lens
                     , hnix-store-binary
                     , hnix-store-core
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
