cabal-version:       2.2
name:                hnix-store-tests
version:             0.1.0.0
synopsis:            Test utilities and instances
description:
  This package contains Arbitrary instances for core
  types, roundtrip property tests, utility functions
  and a harness for running tests that require nix-store
  with nix-daemon.
homepage:            https://github.com/haskell-nix/hnix-store
license:             Apache-2.0
license-file:        LICENSE
author:              Sorki
maintainer:          srk@48.io
copyright:           2023 Sorki
category:            Nix
build-type:          Simple
extra-doc-files:
    CHANGELOG.md
extra-source-files:
    README.md

common commons
  ghc-options:  -Wall
  default-extensions:
      DerivingStrategies
    , DerivingVia
    , FlexibleInstances
    , ScopedTypeVariables
    , StandaloneDeriving
    , RecordWildCards
    , TypeApplications
    , LambdaCase
  default-language: Haskell2010

library
  import: commons
  exposed-modules:
      Data.ByteString.Arbitrary
    , Data.HashSet.Arbitrary
    , Data.Text.Arbitrary
    , Data.Vector.Arbitrary
    , System.Nix.Arbitrary
    , System.Nix.Arbitrary.Base
    , System.Nix.Arbitrary.Build
    , System.Nix.Arbitrary.ContentAddress
    , System.Nix.Arbitrary.Derivation
    , System.Nix.Arbitrary.DerivedPath
    , System.Nix.Arbitrary.Hash
    , System.Nix.Arbitrary.OutputName
    , System.Nix.Arbitrary.Realisation
    , System.Nix.Arbitrary.Signature
    , System.Nix.Arbitrary.Store.Types
    , System.Nix.Arbitrary.StorePath
    , System.Nix.Arbitrary.StorePath.Metadata
    , System.Nix.Arbitrary.UTCTime
    , Test.Hspec.Nix
  build-depends:
      base >=4.12 && <5
    , hnix-store-core >= 0.8
    , bytestring
    , containers
    , crypton
    , dependent-sum > 0.7
    , generic-arbitrary < 1.1
    , hashable
    , hspec
    , QuickCheck
    , text
    , time
    , unordered-containers
    , vector
  hs-source-dirs:      src

test-suite props
  import: commons
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      BaseEncodingSpec
      ContentAddressSpec
      DerivationSpec
      DerivedPathSpec
      RealisationSpec
      StorePathSpec
      SignatureSpec
  hs-source-dirs:
    tests
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends:
      base
    , hnix-store-core
    , hnix-store-tests
    , attoparsec
    , text
    , hspec
